--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="author" content="Mona Nakamura">
+		<meta name="description" content="Amelie Boulangerie is the master of flavor combinations. She creates beautiful macrons with the best flavors. They are made in small batches to ensure fresh quality every time. Gluten free options also available">
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet">
 	</head>
@@ -20,6 +22,7 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
+				<img src="images/cafe-counter.jpg" alt="photo of cafe counter with fairy lights">
 				<p>Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.</p>
 			
 				<ul>
