--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<meta name="author" content="Mona Nakamura">
 		<meta name="description" content="Amelie Boulangerie is the master of flavor combinations. She creates beautiful macrons with the best flavors. They are made in small batches to ensure fresh quality every time. Gluten free options also available">
 		<title>Amelie Boulangerie</title>
-		<link href="styles.css" rel="stylesheet">
-		<link rel="shortcut icon" href="/images/favicon.ico" type="images/favicon.ico">
-		<link rel="icon" href="/images/favicon.ico" type="images/favicon.ico">
+		<link rel="stylesheet" href="style.css">
+		<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+		<link rel="icon" href="images/favicon.png" type="image/x-icon">
 	</head>
 	<body>
 		<header>
